# omniscore_package

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: RELEASING.md
examples/: omniscore_qcri_deberta_v3_colab.ipynb
omniscore/: __init__.py  _auto.py  cli.py  configuration_omniscore.py  examples.py  formatting.py  modeling_omniscore.py  scorer.py
tests/: test_omniscore.py
